--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Changa:wght@200;300;400;500;600;700;800&display=swap');
 
 /* Start Variables */
 :root {
@@ -31,7 +31,8 @@ html {
 }
 
 body {
-    font-family: 'Cairo', sans-serif;
+    font-family: 'Changa', sans-serif;
+
 }
 
 ul {
@@ -198,75 +199,29 @@ header .nav .nav-link:is(.active)::before {
 /* start home page */
 .home {
     padding: var(--section-padding) 0;
-    /* background-image: url(imgs/main.jpg);
+    background-image: url(imgs/main.jpg);
     background-size: cover;
-    background-position: center; */
+    background-position: center;
     margin-top: 84px;
+    position: relative;
 }
 
-/* .home::before {
+.home::before {
     content: "";
     width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
-    top: 0;
+    bottom: 0;
     background-color: #0000005e;
     z-index: 0;
-} */
+}
 
 .home .container {
     position: relative;
     z-index: 1;
 }
 
-.welcome-text {
-    color: var(--main-color);
-    font-size: 32px;
-    font-weight: 700;
-    text-align: center;
-    position: relative;
-    width: fit-content;
-    left: 50%;
-    transform: translateX(-50%);
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    -o-transform: translateX(-50%);
-}
-
-
-.welcome-text::before,
-.welcome-text::after {
-    content: "";
-    position: absolute;
-    height: 3px;
-    left: 0;
-    background-color: var(--main-color);
-    left: 50%;
-    transform: translateX(-50%);
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    -o-transform: translateX(-50%);
-}
-
-.welcome-text::before {
-    bottom: -10px;
-    width: 100%;
-
-}
-
-.welcome-text::after {
-    bottom: -25px;
-    width: 75%;
-}
-
-@media (max-width: 767px) {
-    .welcome-text {
-        font-size: 22px;
-    }
-}
 
 /* end home page */
 
@@ -285,6 +240,21 @@ header .nav .nav-link:is(.active)::before {
 
 .we .image {
     width: 30%;
+}
+
+.welcome-text {
+    color: var(--main-color);
+    font-size: 32px;
+    font-weight: 700;
+    text-align: center;
+    position: relative;
+}
+
+
+@media (max-width: 767px) {
+    .welcome-text {
+        font-size: 22px;
+    }
 }
 
 .we h2 {
@@ -329,7 +299,11 @@ header .nav .nav-link:is(.active)::before {
 
 .we p {
     text-align: right;
-    color: var(--second-color);
+    color: var(--white);
+    font-weight: 500;
+    letter-spacing: 1px;
+    line-height: 1.7;
+    font-size: 14px;
 }
 
 .we .image img {
@@ -390,8 +364,9 @@ header .nav .nav-link:is(.active)::before {
 .more-info .container {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 50px;
 }
+
 .more-info .content {
     display: flex;
     align-items: center;
@@ -409,23 +384,22 @@ header .nav .nav-link:is(.active)::before {
 
 .more-info .content .image {
     width: 30%;
+    overflow: hidden;
+    border-radius: 25px;
+    margin: 0 auto;
 }
 
-.more-info .content .text-content h2 {
+.more-info .title {
     margin-bottom: 20px;
-    color: var(--main-color);
-    background-color: var(--second-color);
-    width: fit-content;
-    padding: 6px;
+    color: var(--white);
     border-radius: 25px 0px 25px;
     -webkit-border-radius: 25px 0px 25px;
     -moz-border-radius: 25px 0px 25px;
     -ms-border-radius: 25px 0px 25px;
     -o-border-radius: 25px 0px 25px;
-}
-.more-info .content:nth-child(even) .text-content h2 {
-    margin-right: auto;
-    margin-left: auto;
+    text-align: center;
+    background: var(--second-color);
+    width: 100%;
 }
 
 .more-info .content .text-content ul {
@@ -447,17 +421,45 @@ header .nav .nav-link:is(.active)::before {
     -moz-border-radius: 25px;
     -ms-border-radius: 25px;
     -o-border-radius: 25px;
+    transition: var(--transition);
+    -webkit-transition: var(--transition);
+    -moz-transition: var(--transition);
+    -ms-transition: var(--transition);
+    -o-transition: var(--transition);
+    aspect-ratio: 4 /2.5;
+    object-fit: cover;
 }
-.more-info .content:nth-child(even) .text-content p {
+
+.more-info .image img:hover {
+    scale: 1.1;
+    rotate: -1deg;
+}
+
+.more-info p {
     text-align: center;
 }
+
+.more-info .row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 120px;
+}
+
 @media (max-width: 767px) {
     .more-info .content {
         flex-direction: column;
     }
+
     .more-info .content .text-content,
-    .more-info .content .image {
+    .more-info .content .image,
+    .more-info .content:nth-child(even) .text-content {
         width: 100%;
+    }
+
+    .more-info .row {
+        flex-direction: column;
+        gap: 50px;
     }
 }
 
