--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
+    background-color: #e9e9e9;
 }
 
 ul {
@@ -56,6 +57,51 @@ a:hover {
 /* End Global Rules */
 
 /* start component */
+.main-title {
+    text-align: center;
+    color: var(--main-color);
+    position: relative;
+    width: fit-content;
+    margin-bottom: 10px;
+    transition: var(--transition);
+    -webkit-transition: var(--transition);
+    -moz-transition: var(--transition);
+    -ms-transition: var(--transition);
+    -o-transition: var(--transition);
+}
+
+.main-title::before {
+    content: "";
+    position: absolute;
+    width: 4px;
+    height: 100%;
+    background-color: var(--main-color);
+    top: 50%;
+    transform: translatey(-50%);
+    -webkit-transform: translatey(-50%);
+    -moz-transform: translatey(-50%);
+    -ms-transform: translatey(-50%);
+    -o-transform: translatey(-50%);
+    right: -10px;
+    transition: var(--transition);
+    -webkit-transition: var(--transition);
+    -moz-transition: var(--transition);
+    -ms-transition: var(--transition);
+    -o-transition: var(--transition);
+    z-index: -1;
+}
+
+.main-title:hover {
+    color: var(--white);
+}
+
+.main-title:hover::before {
+    width: 130%;
+    background-color: var(--main-color);
+    border-left: 5px solid var(--white);
+}
+
+
 /* end component */
 
 /* start header  */
@@ -262,46 +308,6 @@ header .nav .nav-link:is(.active)::before {
     }
 }
 
-.we h2 {
-    text-align: center;
-    color: var(--main-color);
-    position: relative;
-    width: fit-content;
-    margin-bottom: 10px;
-    transition: var(--transition)
-}
-
-.we h2::before {
-    content: "";
-    position: absolute;
-    width: 4px;
-    height: 100%;
-    background-color: var(--main-color);
-    top: 50%;
-    transform: translatey(-50%);
-    -webkit-transform: translatey(-50%);
-    -moz-transform: translatey(-50%);
-    -ms-transform: translatey(-50%);
-    -o-transform: translatey(-50%);
-    right: -10px;
-    transition: var(--transition);
-    -webkit-transition: var(--transition);
-    -moz-transition: var(--transition);
-    -ms-transition: var(--transition);
-    -o-transition: var(--transition);
-    z-index: -1;
-}
-
-.we h2:hover {
-    color: var(--white);
-}
-
-.we h2:hover::before {
-    width: 120%;
-    background-color: var(--main-color);
-    border-left: 5px solid var(--second-color);
-}
-
 .we p {
     text-align: right;
     color: var(--white);
@@ -480,3 +486,83 @@ header .nav .nav-link:is(.active)::before {
 }
 
 /* end more-info section */
+
+/* start services */
+.services {
+    padding: var(--section-padding) 0;
+}
+
+.services .main-title {
+    width: fit-content;
+
+}
+
+.services .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.services .content {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 30px;
+}
+
+.services .content .item {
+    background-color: var(--main-color);
+    text-align: center;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 0 6px;
+    transition: var(--transition);
+    -webkit-transition: var(--transition);
+    -moz-transition: var(--transition);
+    -ms-transition: var(--transition);
+    -o-transition: var(--transition);
+    position: relative;
+}
+
+.services .content .item::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 0;
+    background: var(--second-color);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    transition: all var(--transition);
+    -webkit-transition: all var(--transition);
+    -moz-transition: all var(--transition);
+    -ms-transition: all var(--transition);
+    -o-transition: all var(--transition);
+    display: block;
+}
+
+.services .content .item:hover::before {
+    height: 100%;
+}
+
+.services .content .item a {
+    color: var(--white);
+    font-size: 18px;
+    margin-bottom: 5px;
+    z-index: 10;
+}
+
+/* end services */
